# Kernel-Space-Access

./: CMakeLists.txt  README.md  main.cpp
include/: includes.hpp
src/: main.cpp  memory_utils_posix.cpp  memory_utils_windows.cpp
